--- a/List_Item_Addition/index.html
+++ b/List_Item_Addition/index.html
@@ -3,17 +3,21 @@
     <head>
         <title>List Item Addition</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
         <div id="form-section">
             <input type="text" placeholder="Enter Item Name" id="input-field">
+            <div id="btns">
             <button id="btn">Add List Item</button>
+            <button id="update-btn">Update First Item</button>
+            <button id="del-btn">Delete First Item</button>
+        </div>
         </div>
         <div id="list-items">
             <li>List Item 1</li>
             <li>List Item 2</li>
         </div>
     </body>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </html>
